guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: tharunerpdev
spec:
  type: LoadBalancer
  selector:
    app: guestbook-ui  # Match labels with your Deployment
  ports:
  - port: 80  # Port exposed on the service
    targetPort: 3000  # Port your application listens on
